# miniMD

./: README.md
kokkos/: CMakeLists.txt  Makefile  Makefile.no-mpi  all.IBM-Include-All-CPP  atom.cpp  atom.h  comm.cpp  comm.h  force.h  force_eam.cpp  force_lj.cpp  integrate.cpp  integrate.h  ljs.cpp  neighbor.cpp  neighbor.h  output.cpp  setup.cpp  types.h
mpi-spec/: Makefile  Makefile.no-mpi  atom.cpp  atom.h  comm.cpp  create_spec_snapshot.sh  force.h  force_eam.cpp  force_lj.cpp  force_lj.h  force_lj_custom.cpp  integrate.cpp  ljs.cpp  neighbor.cpp  neighbor.h  output.cpp  setup.cpp  thermo.cpp  types.h
ref/: .run_perf_threaded.swp  Makefile  Makefile.intel  README  atom.cpp  atom.h  comm.cpp  force.h  force_eam.cpp  force_eam.h  force_lj.h  integrate.cpp  ljs.cpp  neighbor.cpp  run_one_test  setup.cpp  thermo.cpp  thermo.h  threadData.h  timer.cpp  types.h
ref/.svn/: dir-prop-base  entries
ref/.svn/text-base/: Makefile.cray_intel.svn-base  comm.cpp.svn-base  comm.h.svn-base  force_eam.cpp.svn-base  force_lj.cpp.svn-base  integrate.h.svn-base  neighbor.h.svn-base  openmp.h.svn-base  output.cpp.svn-base  run_one_test.svn-base  timer.h.svn-base  variant.h.svn-base
tests/reference_output/.svn/: entries
util/p-clang-format/: LICENSE  README.md  p-clang-format
